[package]
name = "mac_cadastro"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
actix-cors = "0.7.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.47.1", features = ["full"] }
dotenvy = "0.15.7"
validator = { version = "0.20.0", features = ["derive"] }
